extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _on_new_game_pressed():
	GameController.start_level(99)


func _on_level_select_pressed():
	pass # Replace with function body.


func _on_leaderboard_pressed():
	pass # Replace with function body.


func _on_exit_pressed():
	pass # Replace with function body.
